refator(auth): refator register page

--- a/frontend/src/pages/cadastro.html
+++ b/frontend/src/pages/cadastro.html
@@ -11,17 +11,17 @@
     <form id="registerForm" class="register-box">
       <h1 class="title">Create Account</h1>
 
-      <label for="name" class="label">Full Name</label>
-      <input type="text" id="name" placeholder="Please insert your full name" />
+      <label for="username" class="label">Nome do usuario</label>
+      <input type="text" id="username" placeholder="Please insert your username" />
+
+      <label for="full_name" class="label">Nome completo (opcional)</label>
+      <input type="text" id="full_name" placeholder="Please insert your full name" />
 
       <label for="email" class="label">Your email</label>
       <input type="email" id="email" placeholder="Please insert your e-mail" />
 
       <label for="password" class="label">Password</label>
       <input type="password" id="password" placeholder="Please insert your password" />
-
-      <label for="confirm-password" class="label">Confirm Password</label>
-      <input type="password" id="confirm-password" placeholder="Please confirm your password" />
 
       <button id="registerBtn" class="register-btn" type="submit">Sign up</button>
 
